feat: create an api doc OpenAPI using Swagger
